--- a/css/index.css
+++ b/css/index.css
@@ -2005,7 +2005,7 @@ ul li{
 	width: 600px;
 	height: 300px;
 	border: 2px solid #000;
-	text-align: center;
+	text-align: left;
 	line-height: 300px;
 	position: relative;
 	font-weight: bold;
